3段階優先度ターゲティングシステム実装とMasterStance機能削除
- ターゲティングシステムを7段階から3段階優先度に簡素化
- 敵タグシステム、分散ターゲティング、危険敵回避機能を実装
- MasterStance機能とGUI要素を完全削除
- 設定項目を20個以上から7個に削減
- ドキュメント5本を新規作成（実装準拠）
- 不要ファイルをクリーンアップ

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>