@@ -1,59 +1,41 @@
 package net.sistr.littlemaidrebirth.entity.util;
 
+import net.minecraft.entity.EntityType;
 import net.minecraft.entity.LivingEntity;
-import net.minecraft.entity.boss.WitherEntity;
-import net.minecraft.entity.boss.dragon.EnderDragonEntity;
-import net.minecraft.entity.mob.*;
+import net.minecraft.entity.mob.MobEntity;
 import net.minecraft.util.math.Vec3d;
 import net.sistr.littlemaidrebirth.api.mode.Mode;
 import net.sistr.littlemaidrebirth.entity.LittleMaidEntity;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.*;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
  * メイドさん統合ターゲティングシステム
+ * 3段階優先度システム（CRITICAL > HIGH > NORMAL）
  */
 public class TargetingSystem {
 
-    // 定数はTargetingConfigクラスで管理
-
     /**
-     * ご主人のスタンス設定
+     * 3段階ターゲット優先度
      */
-    public enum MasterStance {
-        GUARD("guard"),      // 護衛：ご主人保護優先（現状維持）
-        SUPPORT("support");  // 援護：ご主人の戦闘を邪魔せず周囲処理
-
-        private final String value;
-
-        MasterStance(String value) {
-            this.value = value;
-        }
-
-        public String getValue() {
-            return value;
-        }
+    public enum TargetPriority {
+        CRITICAL,  // 自分の身を守る
+        HIGH,       // ご主人の身を守る
+        NORMAL     // 味方の身を守る・周囲の敵
     }
 
     /**
-     * 戦闘設定クラス
+     * 敵タグ（特殊な対応が必要な敵の分類）
      */
-    public static class CombatSettings {
-        private final MasterStance masterStance;
-
-        public CombatSettings() {
-            this(MasterStance.GUARD);
-        }
-
-        public CombatSettings(MasterStance masterStance) {
-            this.masterStance = masterStance;
-        }
-
-        public MasterStance getMasterStance() {
-            return masterStance;
-        }
-
+    public enum EnemyTag {
+        APPROACH_PROHIBITED,     // 接近禁止
+        ATTACK_PROHIBITED,       // 攻撃禁止
+        MELEE_ATTACK_PROHIBITED, // 近距離攻撃禁止
+        RANGED_ATTACK_PROHIBITED // 遠距離攻撃禁止
     }
 
     /**
@@ -86,18 +68,11 @@ public class TargetingSystem {
         }
 
         public boolean isInjured() {
-            return this.entity.getHealth() / this.entity.getMaxHealth() < TargetingConfig.getInjuredHealthThreshold();
+            return this.entity.getHealth() / this.entity.getMaxHealth() < TargetingConfig.getInjuredThreshold();
         }
 
         public Vec3d getPosition() {
             return this.entity.getPos();
-        }
-
-        public Optional<EntityWrapper> getCurrentTarget() {
-            if (this.entity instanceof MobEntity mobEntity) {
-                return Optional.ofNullable(mobEntity.getTarget()).map(EntityWrapper::new);
-            }
-            return Optional.empty();
         }
 
         @Override
@@ -124,14 +99,10 @@ public class TargetingSystem {
             this.maid = maid;
         }
 
-        public CombatType getCombatType() {
-            return maid.getMode().map(mode -> {
-                if (mode.getBattleModeType() == Mode.BattleModeType.BOW) {
-                    return CombatType.BOW;
-                } else {
-                    return CombatType.SWORD;
-                }
-            }).orElse(CombatType.SWORD);
+        public Mode.BattleModeType getCombatType() {
+            return maid.getMode()
+                    .map(mode -> mode.getBattleModeType())
+                    .orElse(Mode.BattleModeType.NONE);
         }
     }
 
@@ -146,20 +117,6 @@ public class TargetingSystem {
             super(mob);
             this.mob = mob;
             this.isEnemy = isEnemy;
-        }
-
-        public boolean canHitProjectile() {
-            return !(mob instanceof EndermanEntity
-                    || this.mob instanceof EnderDragonEntity);
-        }
-
-        public boolean isDangerous() {
-            return this.mob instanceof EnderDragonEntity
-                    || this.mob instanceof WitherEntity
-                    || this.mob instanceof WardenEntity
-                    || this.mob instanceof RavagerEntity
-                    || this.mob instanceof CreeperEntity
-                    || this.mob instanceof EvokerEntity;
         }
 
         public boolean isEnemy() {
@@ -186,286 +143,190 @@ public class TargetingSystem {
         }
     }
 
-    public enum CombatType {
-        NONE,
-        SWORD,
-        BOW
-    }
-
     /**
-     * 指定されたメイドさんから見た各敵の優先度を算出
+     * 3段階優先度システムでターゲットを選択
      *
      * @param maid       判断するメイドさん
      * @param enemies    周囲の敵リスト
      * @param master     ご主人の情報（nullの場合は主人関連の判定をスキップ）
      * @param otherMaids 他のメイドさんのリスト
-     * @param settings   戦闘設定（オプション、デフォルトは護衛モード）
-     * @return {enemy: priority_score} のマップ
+     * @return 選択されたターゲット（ない場合はOptional.empty()）
      */
-    public static Map<Mob, Float> calculateEnemyPriorities(
-            Maid maid, List<Mob> enemies, @Nullable Master master, List<Maid> otherMaids,
-            @Nullable CombatSettings settings) {
+    public static Optional<MobEntity> selectTarget(
+            Maid maid, List<Mob> enemies, @Nullable Master master, List<Maid> otherMaids) {
 
-        CombatSettings combatSettings = settings != null ? settings : new CombatSettings();  // デフォルトは護衛モード
-        Map<Mob, Float> priorities = new HashMap<>();
+        int maxAttackers = calculateMaxAttackers(otherMaids);
 
-        for (Mob mob : enemies) {
-            float basePriority = calculateBasePriority(mob, maid, master, otherMaids);
+        // 全敵を評価し、攻撃可能な敵を優先度付きで収集
+        Optional<Mob> bestTarget = enemies.stream()
+                .filter(enemy -> !shouldAvoidDangerous(enemy, maid))
+                .filter(enemy -> !isOverTargeted(enemy, otherMaids, maxAttackers))
+                .map(enemy -> new TargetCandidate(enemy, determinePriority(enemy, maid, master, otherMaids)))
+                .filter(candidate -> candidate.priority != null)
+                .min(Comparator
+                        .comparing((TargetCandidate c) -> c.priority)
+                        .thenComparingDouble(c -> c.enemy.getPosition().distanceTo(maid.getPosition())))
+                .map(candidate -> candidate.enemy);
 
-            // ベースが0以下なら敵対しない
-            if (basePriority <= 0) {
-                priorities.put(mob, basePriority);
-                continue;
-            }
+        return bestTarget.map(Mob::getMob);
+    }
 
-            float score = basePriority;
-            score += calculateDistanceModifier(mob, maid, master);
-            score += calculateWeaponCompatibility(mob, maid);
-            score += calculateDangerModifier(mob, maid, master, otherMaids);
-            score += calculateDistributionModifier(mob, maid, otherMaids);
-            score += calculateMasterStanceModifier(mob, master, combatSettings);
-            score += calculateInjuredAllyAttackerModifier(mob, maid, master, otherMaids);
-
-            priorities.put(mob, score);
-        }
-
-        return priorities;
+    private record TargetCandidate(Mob enemy, TargetPriority priority) {
     }
 
     /**
-     * 基本優先度を階層化に基づいて算出
+     * 3段階優先度判定
+     *
+     * @param enemy      判定対象の敵
+     * @param maid       判断するメイドさん
+     * @param master     ご主人の情報（null可）
+     * @param otherMaids 他のメイドさんのリスト
+     * @return 優先度（CRITICAL > HIGH > NORMAL）またはnull（ターゲット対象外）
      */
-    public static float calculateBasePriority(Mob mob, Maid maid, Master master, List<Maid> otherMaids) {
-        float distanceToMaid = (float) mob.getPosition().distanceTo(maid.getPosition());
-
-        // 特別優先度: 危険敵からの避難
-        if (mob.isDangerous() && (mob.isTargeting(maid) || maid.isAttackedBy(mob))) {
-            return TargetingConfig.getPriorityEvacuation();  // 避難優先（負の値で戦闘回避）
+    private static TargetPriority determinePriority(Mob enemy, Maid maid, Master master, List<Maid> otherMaids) {
+        // CRITICAL: 自分の身を守る
+        if (maid.isAttackedBy(enemy)) {
+            return TargetPriority.CRITICAL;
         }
 
-        // 優先度1: 攻撃してきた相手
-        if (maid.isAttackedBy(mob)) {
-            return TargetingConfig.getPrioritySelfAttacker();
+        // HIGH: ご主人の身を守る
+        if (master != null && (master.isAttackedBy(enemy) || master.isTargeting(enemy) || enemy.isAttackedBy(master))) {
+            return TargetPriority.HIGH;
         }
 
-        // 優先度2: ご主人を攻撃した相手
-        if (master != null && master.isAttackedBy(mob)) {
-            return TargetingConfig.getPriorityMasterAttacker();
-        }
-
-        // 優先度4: 他メイドさんを攻撃した相手
+        // NORMAL: 味方の身を守る・周囲の敵
         for (Maid otherMaid : otherMaids) {
-            if (otherMaid.isAttackedBy(mob)) {
-                return TargetingConfig.getPriorityMaidAttacker();
+            if (otherMaid.isAttackedBy(enemy) || otherMaid.isTargeting(enemy)) {
+                return TargetPriority.NORMAL;
             }
         }
 
-        // 優先度5: ご主人が攻撃した相手
-        if (master != null && (master.isTargeting(mob) || mob.isAttackedBy(master))) {
-            return TargetingConfig.getPriorityMasterTarget();
-        }
+        // 先制攻撃対象（距離内の敵対モブ、攻撃禁止敵以外）
+        if (enemy.isEnemy()) {
+            // 攻撃禁止敵は攻撃対象外（常に避けるため）
+            if (hasAttackProhibitedTag(enemy)) {
+                return null;
+            }
 
-        // 優先度6: 他メイドさんがターゲットしている相手
-        for (Maid otherMaid : otherMaids) {
-            if (otherMaid.isTargeting(mob)) {
-                return TargetingConfig.getPriorityMaidTarget();
+            float distanceToMaid = (float) enemy.getPosition().distanceTo(maid.getPosition());
+            if (distanceToMaid <= TargetingConfig.getAlertRange()) {
+                return TargetPriority.NORMAL;
             }
         }
 
-        // 優先度7: 周囲のMob
-        if (mob.isDangerous()) {
-            return 0;  // 危険な敵には先制攻撃しない
-        }
-        // 先制攻撃距離制限（メイドさんとご主人両方からの距離を考慮）
-        boolean withinPreemptiveRange = distanceToMaid <= TargetingConfig.getMaxPreemptiveDistance();
-        if (master != null) {
-            float distanceToMaster = (float) mob.getPosition().distanceTo(master.getPosition());
-            withinPreemptiveRange = withinPreemptiveRange && distanceToMaster <= TargetingConfig.getMaxPreemptiveDistance();
-        }
-        if (!withinPreemptiveRange) {
-            return 0;  // 先制攻撃範囲外
-        }
-
-        // 敵対モブは常にターゲット対象
-        if (mob.isEnemy()) {
-            return TargetingConfig.getPriorityNormalEnemy();
-        } else {
-            return 0;  // 中立モブはターゲット対象外
-        }
+        return null; // ターゲット対象外
     }
 
     /**
-     * 距離に基づく優先度修正
+     * 分散ターゲティング判定（攻撃者が上限を越えているか）
+     * 集中攻撃を防ぎ、メイドさんたちがバランス良く敵を攻撃するための判定
+     *
+     * @param enemy        判定対象の敵
+     * @param otherMaids   他のメイドさんのリスト
+     * @param maxAttackers 最大攻撃者数
+     * @return 上限を越えているtrue
      */
-    public static float calculateDistanceModifier(Mob mob, Maid maid, @Nullable Master master) {
-        float distanceToMaid = (float) mob.getPosition().distanceTo(maid.getPosition());
-
-        // 最大ターゲット距離チェック（メイドさんとご主人両方からの距離を考慮）
-        boolean withinTargetRange = distanceToMaid <= TargetingConfig.getMaxTargetDistance();
-        if (master != null) {
-            float distanceToMaster = (float) mob.getPosition().distanceTo(master.getPosition());
-            withinTargetRange = withinTargetRange && distanceToMaster <= TargetingConfig.getMaxTargetDistance();
-        }
-        if (!withinTargetRange) {
-            return TargetingConfig.getDistanceLimitPenalty();  // 距離が遠すぎる場合は大幅減点
-        }
-
-        // メイドさんからの距離ペナルティ（メイドさんから遠いほど低優先度）
-        float maidDistancePenalty = Math.max(0,
-                (distanceToMaid - TargetingConfig.getMaidDistancePenaltyBaseDistance())
-                        * TargetingConfig.getMaidDistancePenaltyMultiplier());
-
-        // ご主人との距離ボーナス（ご主人に近いほど高優先度）
-        float masterDistanceBonus = 0;
-        if (master != null) {
-            float distanceToMaster = (float) mob.getPosition().distanceTo(master.getPosition());
-            masterDistanceBonus = Math.max(0,
-                    (TargetingConfig.getMasterDistanceBonusBaseDistance() - distanceToMaster)
-                            * TargetingConfig.getMasterDistanceBonusMultiplier());
-        }
-
-        // ご主人距離ペナルティ（ご主人から遠いほど低優先度）
-        float masterDistancePenalty = 0;
-        if (master != null) {
-            float distanceToMaster = (float) mob.getPosition().distanceTo(master.getPosition());
-            masterDistancePenalty = Math.max(0,
-                    (distanceToMaster - TargetingConfig.getMasterDistancePenaltyBaseDistance())
-                            * TargetingConfig.getMasterDistancePenaltyMultiplier());
-        }
-
-        // メイドさん距離ボーナス（メイドさんに近いほど高優先度）
-        float maidDistanceBonus = Math.max(0,
-                (TargetingConfig.getMaidDistanceBonusBaseDistance() - distanceToMaid)
-                        * TargetingConfig.getMaidDistanceBonusMultiplier());
-
-        return masterDistanceBonus - maidDistancePenalty + maidDistanceBonus - masterDistancePenalty;
-    }
-
-    /**
-     * 武器とターゲットの相性による修正
-     */
-    public static float calculateWeaponCompatibility(Mob mob, Maid maid) {
-        float distanceToEnemy = (float) mob.getPosition().distanceTo(maid.getPosition());
-
-        if (maid.getCombatType() == CombatType.BOW) {
-            // 弓の場合
-            if (!mob.canHitProjectile()) {
-                return TargetingConfig.getNonProjectileHitPenalty();  // 弾が当たらない場合は戦わない
-            } else if (distanceToEnemy >= TargetingConfig.getBowLongRangeThreshold()) {  // 遠距離ボーナス
-                return TargetingConfig.getBowLongRangeBonus();
-            } else {
-                return TargetingConfig.getBowCloseRangePenalty();  // 近距離ペナルティ
-            }
-        } else if (maid.getCombatType() == CombatType.SWORD) {
-            // 剣の場合
-            // 危険敵への近接リスク
-            if (mob.isDangerous()) {
-                return TargetingConfig.getSwordDangerPenalty();  // 危険敵と戦うリスクペナルティ
-            }
-            if (distanceToEnemy <= TargetingConfig.getSwordCloseRangeThreshold()) {
-                return TargetingConfig.getSwordCloseRangeBonus();  // 近距離ボーナス
-            } else {
-                return TargetingConfig.getSwordLongRangePenalty();  // 遠距離ペナルティ
-            }
-        }
-
-        return 0;
-    }
-
-    /**
-     * 危険な敵に対する特殊修正
-     */
-    public static float calculateDangerModifier(Mob mob, Maid maid, @Nullable Master master, List<Maid> otherMaids) {
-        if (!mob.isDangerous()) {
-            return 0;
-        }
-
-        float distanceToEnemy = (float) mob.getPosition().distanceTo(maid.getPosition());
-
-        // 危険敵への基本ペナルティ
-        float dangerPenalty = TargetingConfig.getDangerBasePenalty();
-
-        // 近距離での危険敵は更にペナルティ
-        if (distanceToEnemy < TargetingConfig.getDangerCloseRangeThreshold()) {
-            dangerPenalty += TargetingConfig.getDangerClosePenalty();
-        }
-
-        return dangerPenalty;
-    }
-
-    /**
-     * 他メイドさんとの分散攻撃を考慮した修正
-     */
-    public static float calculateDistributionModifier(Mob mob, Maid maid, List<Maid> otherMaids) {
-        CombatType currentCombatType = maid.getCombatType();
-        
-        // 同じ武器種で同じ敵をターゲットしている他メイドさんの数
-        long sameWeaponTargetingCount = otherMaids.stream()
-                .filter(otherMaid -> otherMaid.isTargeting(mob))
-                .filter(otherMaid -> otherMaid.getCombatType() != CombatType.NONE)  //非戦闘メイドさんのターゲットは省く
-                .filter(otherMaid -> !otherMaid.isInjured())  // 負傷メイドさんのターゲットは省く
-                .filter(otherMaid -> otherMaid.getCombatType() == currentCombatType)  // 同じ武器種
+    private static boolean isOverTargeted(Mob enemy, List<Maid> otherMaids, int maxAttackers) {
+        long currentAttackers = otherMaids.stream()
+                .filter(maid -> maid.isTargeting(enemy))
+                .filter(maid -> maid.getCombatType() != Mode.BattleModeType.NONE)
+                .filter(maid -> !maid.isInjured())
                 .count();
 
-        // 異なる武器種で同じ敵をターゲットしている他メイドさんの数
-        long differentWeaponTargetingCount = otherMaids.stream()
-                .filter(otherMaid -> otherMaid.isTargeting(mob))
-                .filter(otherMaid -> otherMaid.getCombatType() != CombatType.NONE)  //非戦闘メイドさんのターゲットは省く
-                .filter(otherMaid -> !otherMaid.isInjured())  // 負傷メイドさんのターゲットは省く
-                .filter(otherMaid -> otherMaid.getCombatType() != currentCombatType)  // 異なる武器種
-                .count();
-
-        // 集中攻撃回避
-        float sameWeaponPenalty = sameWeaponTargetingCount * TargetingConfig.getDistributionPenaltyMultiplier();
-        float differentWeaponPenalty = differentWeaponTargetingCount * TargetingConfig.getDistributionPenaltyMultiplierDifferentWeapon();
-
-        return -(sameWeaponPenalty + differentWeaponPenalty);
+        return currentAttackers >= maxAttackers;
     }
 
     /**
-     * ご主人のスタンスに基づく優先度修正
+     * 敵を回避すべきかの判定
+     * 新敵タグシステムに基づいて攻撃可能性を判定
+     *
+     * @param enemy 判定対象の敵
+     * @param maid  判断するメイドさん
+     * @return 回避すべき場合true
      */
-    public static float calculateMasterStanceModifier(Mob mob, @Nullable Master master, CombatSettings settings) {
-        if (master == null || settings.getMasterStance() == MasterStance.GUARD) {
-            // 主人不在または護衛モード：現状維持（修正なし）
-            return 0;
-        } else if (settings.getMasterStance() == MasterStance.SUPPORT) {
-            // 援護モード：ご主人の戦闘を邪魔しない
-            if (master.isTargeting(mob) || mob.isAttackedBy(master)) {
-                // ご主人がターゲットしている敵は低優先度に
-                return TargetingConfig.getSupportModeMasterTargetPenalty();
-            } else {
-                // ご主人以外の敵は優先度アップ
-                return TargetingConfig.getSupportModeOtherEnemyBonus();
-            }
+    private static boolean shouldAvoidDangerous(Mob enemy, Maid maid) {
+        // 攻撃禁止敵は常に回避
+        if (hasAttackProhibitedTag(enemy)) {
+            return true;
         }
 
-        return 0;
+        // 接近禁止敵は武器に応じて判定
+        if (hasApproachProhibitedTag(enemy)) {
+            // 弓持ちの場合は遠距離から攻撃可能（ただし遠距離攻撃禁止でない場合のみ）
+            if (maid.getCombatType() == Mode.BattleModeType.BOW && !hasRangedAttackProhibitedTag(enemy)) {
+                float distance = (float) enemy.getPosition().distanceTo(maid.getPosition());
+                return distance < TargetingConfig.getCombatRange(); // 近い場合は回避
+            }
+            // 剣持ちの場合は基本的に回避
+            return maid.getCombatType() == Mode.BattleModeType.SWORD;
+        }
+
+        // 武器種別に応じた攻撃禁止判定
+        if (maid.getCombatType() == Mode.BattleModeType.SWORD && hasMeleeAttackProhibitedTag(enemy)) {
+            return true; // 近距離攻撃禁止敵は剣で攻撃不可
+        }
+
+        if (maid.getCombatType() == Mode.BattleModeType.BOW && hasRangedAttackProhibitedTag(enemy)) {
+            return true; // 遠距離攻撃禁止敵は弓で攻撃不可
+        }
+
+        return false;
     }
 
+
     /**
-     * 負傷している身内の攻撃者に対する優先度ボーナス
+     * 最大攻撃者数を計算（min(3体, ceil(メイドさん数×50%))）
+     * 集中攻撃を防ぐための上限値をメイドさんの数に応じて計算
+     *
+     * @param otherMaids 他のメイドさんのリスト
+     * @return 一体の敵あたりの最大攻撃者数
      */
-    public static float calculateInjuredAllyAttackerModifier(Mob mob, Maid maid, @Nullable Master master, List<Maid> otherMaids) {
-        float injuredAllyAttackerBonus = 0;
-
-        // ご主人が負傷している場合
-        if (master != null && master.isInjured() && master.isAttackedBy(mob)) {
-            injuredAllyAttackerBonus += TargetingConfig.getInjuredMasterAttackerBonus();
-        }
-
-        // 他のメイドさんが負傷している場合
-        for (Maid otherMaid : otherMaids) {
-            if (otherMaid.isInjured() && otherMaid.isAttackedBy(mob)) {
-                injuredAllyAttackerBonus += TargetingConfig.getInjuredMaidAttackerBonus();
-            }
-        }
-
-        return injuredAllyAttackerBonus;
+    private static int calculateMaxAttackers(List<Maid> otherMaids) {
+        int totalMaids = otherMaids.size() + 1; // 自分も含める
+        int distributedCount = (int) Math.ceil(totalMaids * TargetingConfig.getDistributionRatio());
+        return Math.min(TargetingConfig.getMaxAttackersPerEnemy(), distributedCount);
     }
 
     /**
-     * 避難が必要かどうかを判定（危険敵からの避難のみ）
+     * 攻撃禁止タグの判定（一切攻撃してはいけない敵）
+     * TODO: IFFシステム統合または設定ファイルで管理するように変更
+     */
+    private static boolean hasAttackProhibitedTag(Mob enemy) {
+        EntityType<?> type = enemy.getMob().getType();
+        return type == EntityType.WITHER ||
+                type == EntityType.ENDER_DRAGON ||
+                type == EntityType.WARDEN;
+    }
+
+    /**
+     * 接近禁止タグの判定（弓持ちなら遠距離攻撃可能）
+     * TODO: IFFシステム統合または設定ファイルで管理するように変更
+     */
+    private static boolean hasApproachProhibitedTag(Mob enemy) {
+        EntityType<?> type = enemy.getMob().getType();
+        return type == EntityType.CREEPER;
+    }
+
+    /**
+     * 近距離攻撃禁止タグの判定（剣などでは攻撃できない敵）
+     * TODO: IFFシステム統合または設定ファイルで管理するように変更
+     */
+    private static boolean hasMeleeAttackProhibitedTag(Mob enemy) {
+        EntityType<?> type = enemy.getMob().getType();
+        return type == EntityType.WITHER_SKELETON ||
+                type == EntityType.RAVAGER;
+    }
+
+    /**
+     * 遠距離攻撃禁止タグの判定（弓では攻撃できない敵）
+     * TODO: IFFシステム統合または設定ファイルで管理するように変更
+     */
+    private static boolean hasRangedAttackProhibitedTag(Mob enemy) {
+        return enemy.getMob().getType() == EntityType.ENDERMAN;
+    }
+
+    /**
+     * 避難が必要かどうかを判定（攻撃禁止敵・接近禁止敵からの避難）
      *
      * @param maid    判断するメイドさん
      * @param enemies 周囲の敵リスト
@@ -473,11 +334,11 @@ public class TargetingSystem {
      */
     public static boolean needsEvacuation(Maid maid, List<Mob> enemies) {
         return enemies.stream()
-                .anyMatch(mob -> mob.isDangerous()
-                        && (mob.isTargeting(maid)
-                        || mob.getPosition().distanceTo(maid.getPosition())
-                        <= TargetingConfig.getDangerCloseRangeThreshold())
-                );
+                .anyMatch(enemy -> {
+                    double distance = maid.getPosition().distanceTo(enemy.getPosition());
+                    return (hasAttackProhibitedTag(enemy) || hasApproachProhibitedTag(enemy))
+                            && distance < TargetingConfig.getDangerousAvoidDistance();
+                });
     }
 
     /**
@@ -485,14 +346,14 @@ public class TargetingSystem {
      *
      * @param maid    判断するメイドさん
      * @param enemies 周囲の敵リスト
-     * @return 最も危険な敵のリスト
+     * @return 避難対象の敵のリスト（距離順）
      */
     public static List<Mob> getDangerousEnemies(Maid maid, List<Mob> enemies) {
         return enemies.stream()
-                .filter(mob -> mob.isDangerous() && (mob.isTargeting(maid)
-                        || mob.getPosition().distanceTo(maid.getPosition())
-                        <= TargetingConfig.getDangerCloseRangeThreshold())
-                ).sorted(Comparator.comparingDouble(e -> e.getPosition().distanceTo(maid.getPosition())))
-                .toList(); // 最も近い危険敵を優先
+                .filter(enemy -> hasAttackProhibitedTag(enemy) || hasApproachProhibitedTag(enemy))
+                .filter(enemy -> maid.getPosition().distanceTo(enemy.getPosition())
+                        < TargetingConfig.getDangerousAvoidDistance())
+                .sorted(Comparator.comparingDouble(e -> e.getPosition().distanceTo(maid.getPosition())))
+                .collect(Collectors.toList()); // 最も近い避難対象敵を優先
     }
 }
